Fixed modal display but had to remove block that used to sit behind it... Will need to look into this. Also updated class references. Done WA-634

--- a/sagebrew/sagebrew/static/less/sb_general.less
+++ b/sagebrew/sagebrew/static/less/sb_general.less
@@ -387,6 +387,14 @@
 }
 .sb_deco_line {
   border-bottom: solid 5px;
-  border-color: #9dbbb9;
+  border-color: @sb_green_medium;
   margin-bottom: 35px;
+}
+.sb_btn_modal {
+  a{
+    color: @white;
+    &:visited{
+      background-color: none;
+    }
+  }
 }
