--- a/sagebrew/sagebrew/static/less/sb_registration/sb_registration.less
+++ b/sagebrew/sagebrew/static/less/sb_registration/sb_registration.less
@@ -112,13 +112,7 @@
     height: 100%;
     margin-bottom: 160px;
 }
-.sb_photo_modal {
-    margin-top: 2%;
-    margin-left: 17%;
-    margin-right: 17%;
-    margin-bottom: 2%;
-    border-radius: @sb_common_radius;
-}
+
 .sb_modal_body {
     background-color: @sb_grey_extra_light;
     border-radius:0 0 5px 5px ;
